# 36.-Capitaland-AI-Hackathon-2025

./: Dockerfile  README.md  chat.py  pyproject.toml
src/: azure.py
